adding html files

--- a/web_static/8-index.html
+++ b/web_static/8-index.html
@@ -71,20 +71,68 @@
 		  </p>
 		</div>
 		<div class="description">
-		  <p>
-		    A lovely second version of a classic home. Perfect for everybody.
-		  </p>
+		  <p>home description</p>
 		</div>
 	      </article>
 	    </li>
 	    <li>
 	      <article>
-		<h2>Tony house</h2>
+		  <h2>Tiny house</h2>
+		  <div class="price_by_night">
+		    <p>$65</p>
+		  </div>
+		  <div class="information">
+		    <div class="max_guest">
+		      <img src="guest_icon"/>
+		      4 Guests
+		    </div>
+		    <div class="number_rooms">
+		      <img src="room_icon"/>
+		      2 Bedrooms
+		    </div>
+		    <div class="number_bathrooms">
+		      <img src="bath_icon"/>
+		      1 Bathrooms
+		    </div>
+		  </div>
+		  <div class="user">
+		    <p>
+		      <b>Owner: </b>lispsum
+		    </p>
+		  </div>
+		  <div class="description">
+		    <p>home description</p>
+		  </div>
 	      </article>
 	    </li>
 	    <li>
 	      <article>
 		<h2>A suite</h2>
+		<div class="price_by_night">
+		  <p>$190</p>
+		</div>
+		<div class="information">
+		  <div class="max_guest">
+		    <img src="guest_icon"/>
+		    2 Guests
+		  </div>
+		  <div class="number_rooms">
+		    <img src="room_icon"/>
+		    1 Bedrooms
+		  </div>
+		  <div class="number_bathrooms">
+		    <img src="bath_icon"/>
+		    1 Bathrooms
+		  </div>
+		</div>
+		<div class="user">
+		  <p>
+		    <b>Owner: </b>lispsum
+		  </p>
+		</div>
+		<div class="description">
+		  <p>home description</p>
+		</div>
 	      </article>
 	    </li>
 	  </ul>
