--- a/web_static/0-index.html
+++ b/web_static/0-index.html
@@ -2,9 +2,11 @@
 <html>
   <head>
   </head>
-  <body>
-    <header style="background-color:#FF0000; height:70px; width:100%"></header>
-    <footer style="background-color:#00FF00; height:60px; width: 100%;
-position: fixed; bottom:0px">Holberton School</footer>
+  <body style="margin:0px">
+    <header style="background-color:#FF0000;height:70px;width:100%;"></header>
+    <footer style="background-color:#00FF00; height:70px; width:100%;
+		   text-align:center; position:fixed; bottom:0">
+      <div style="margin: auto; width: 50%; padding: 25px">Holberton School</div>
+    </footer>
   </body>
 </html>
