--- a/web_static/1-index.html
+++ b/web_static/1-index.html
@@ -2,22 +2,32 @@
 <html>
   <head>
     <style type="text/css">
-    header {
-      background-color: #FF0000;
-      height: 70px;
-      width: 100%;
-    }
-    footer {
+      body {
+      margin:0px;
+      }
+      header {
+      background-color:#FF0000;
+      height:0px;
+      width:100%;
+      }
+      footer {
       background-color:#00FF00;
-      height: 60px;
-      width: 100%;
-      position: fixed;
-      bottom: 0px;
-    }
+      height:70px; width:100%;
+      text-align:center;
+      position:fixed;
+      bottom:0
+      }
+      div {
+      margin: auto;
+      width: 50%;
+      padding: 25px;
+      }
     </style>
   </head>
   <body>
     <header></header>
-    <footer>Holberton School</footer>
+    <footer>
+      <div>Holberton School</div>
+    </footer>
   </body>
 </html>
