--- a/web_static/2-index.html
+++ b/web_static/2-index.html
@@ -4,11 +4,12 @@
     <link rel="stylesheet" type="text/css" href="styles/2-common.css">
     <link rel="stylesheet" type="text/css" href="styles/2-header.css">
     <link rel="stylesheet" type="text/css" href="styles/2-footer.css">
+    <link rel="icon" href="./images/icon.png">
   </head>
-  <header>
-  </header>
   <body>
+    <header></header>
     <footer>
+      <div>Holberton School</div>
     </footer>
   </body>
 </html>
