--- a/web_static/4-index.html
+++ b/web_static/4-index.html
@@ -1,16 +1,23 @@
 <!DOCTYPE HTML>
 <html>
   <head>
-    <link href="styles/4-common.css" rel="stylesheet" type="text/css"/>
-    <link href="styles/3-header.css" rel="stylesheet" type="text/css"/>
-    <link href="styles/3-footer.css" rel="stylesheet" type="text/css"/>
-    <link href="styles/4-filters.css" rel="stylesheet" type="text/css"/>
-    <link rel="icon" href="images/icon.png"/>
+    <link rel="stylesheet" type="text/css" href="2-common.css">
+    <link rel="stylesheet" type="text/css" href="2-header.css">
+    <link rel="stylesheet" type="text/css" href="2-footer.css">
+    <link rel="stylesheet" type="text/css" href="4-filters.css">
+    <link rel="icon" href="https://s3.amazonaws.com/intranet-projects-files/holbertonschool-higher-level_programming+/268/icon.png">
   </head>
-  <header>
-  </header>
   <body>
+    <header>
+      <div class="logo"></div>
+    </header>
+    <div class="container">
+      <section class="filter">
+	<button>Search</button>
+      </section>
+    </div>
     <footer>
+      <div>Holberton School</div>
     </footer>
   </body>
 </html>
