--- a/web_static/7-index.html
+++ b/web_static/7-index.html
@@ -1,71 +1,75 @@
 <!DOCTYPE HTML>
 <html>
   <head>
-    <link href="styles/4-common.css" rel="stylesheet" type="text/css"/>
-    <link href="styles/3-header.css" rel="stylesheet" type="text/css"/>
-    <link href="styles/3-footer.css" rel="stylesheet" type="text/css"/>
-    <link href="styles/4-filters.css" rel="stylesheet" type="text/css"/>
+    <link rel="stylesheet" type="text/css" href="2-common.css">
+    <link rel="stylesheet" type="text/css" href="2-header.css">
+    <link rel="stylesheet" type="text/css" href="2-footer.css">
+    <link rel="stylesheet" type="text/css" href="4-filters.css">
+    <link rel="stylesheet" type="text/css" href="7-places.css">
     <link rel="icon" href="images/icon.png"/>
+    <link rel="icon" href="https://s3.amazonaws.com/intranet-projects-files/holbertonschool-higher-level_programming+/268/icon.png">
   </head>
-  <header>
-    <div class="logo"></div>
-  </header>
   <body>
-    <div class="wrapper">
-      <div class="container">
-	<section class="filters">
-	  <div class="locations">
-	    <h3>State</h3>
-	    <h4>California, Arizona...</h4>
-	    <ul class="popover">
-	      <li><h2>Arizona:</h2></li>
-	      <ul class="sublist">
+    <header>
+      <div class="logo"></div>
+    </header>
+    <div class="container">
+      <section class="filter">
+	<button>Search</button>
+	<div class="locations">
+	  <h3>States</h3>
+	  <h4>California, Arizona...</h4>
+	  <ul class="popover">
+	    <li>
+	      <h2>Arizona:</h2>
+	      <ul>
 		<li>Page</li>
 		<li>Page2</li>
 	      </ul>
-	      <li><h2>California:</h2></li>
-	      <ul class="sublist">
+	    </li>
+	    <li>
+	      <h2>California:</h2>
+	      <ul>
 		<li>San Francisco</li>
 		<li>Los Altos</li>
 	      </ul>
-	    </ul>
-	  </div>
-	  <div class="amenities">
-	    <h3>Amenities</h3>
-	    <h4>Internet, kitchen...</h4>
-	    <ul class="popover">
-	      <li>Internet</li>
-	      <li>TV</li>
-	      <li>Kitchen</li>
-	      <li>Iron</li>
-	    </ul>
-	  </div>
-	  <button class="search">Search</button>
-	</section>
-	<section class="places">
-	  <h1>Places</h1>
-	  <ul>
-	    <li>
-	      <article>
-		<h2>My home</h2>
-	      </article>
-	    </li>
-	    <li>
-	      <article>
-		<h2>Tiny house</h2>
-	      </article>
-	    </li>
-	    <li>
-	      <article>
-		<h2>A suite</h2>
-	      </article>
 	    </li>
 	  </ul>
-	</section>
-      </div>
+	</div>
+	<div class="amenities">
+	  <h3>Amenities</h3>
+	  <h4>Internet, Kitchen...</h4>
+	  <ul class="popover">
+	    <li>Internet</li>
+	    <li>TV</li>
+	    <li>Kitchen</li>
+	    <li>Iron</li>
+	  </ul>
+	</div>
+      </section>
     </div>
+    <section class="places">
+      <h1>Places</h1>
+      <ul>
+	<li>
+	  <article>
+	    <h2>My home</h2>
+	  </article>
+	</li>
+	<li>
+	  <article>
+	    <h2>Tiny house</h2>
+	  </article>
+	</li>
+	<li>
+	  <article>
+	    <h2>A suite</h2>
+	  </article>
+	</li>
+      </ul>
+    </section>
     <footer>
-      <span>Holberton School</span>
+      <div>Holberton School</div>
     </footer>
   </body>
 </html>
