changes to head html file

--- a/web_static/7-index.html
+++ b/web_static/7-index.html
@@ -1,13 +1,12 @@
 <!DOCTYPE HTML>
 <html>
   <head>
-    <link rel="stylesheet" type="text/css" href="2-common.css">
-    <link rel="stylesheet" type="text/css" href="2-header.css">
-    <link rel="stylesheet" type="text/css" href="2-footer.css">
-    <link rel="stylesheet" type="text/css" href="4-filters.css">
-    <link rel="stylesheet" type="text/css" href="7-places.css">
+    <link rel="stylesheet" type="text/css" href="styles/4-common.css"/>
+    <link rel="stylesheet" type="text/css" href="styles/3-header.css"/>
+    <link rel="stylesheet" type="text/css" href="styles/3-footer.css"/>
+    <link rel="stylesheet" type="text/css" href="styles/6-filters.css"/>
+    <link rel="stylesheet" type="text/css" href="styles/7-places.css"/>
     <link rel="icon" href="images/icon.png"/>
-    <link rel="icon" href="https://s3.amazonaws.com/intranet-projects-files/holbertonschool-higher-level_programming+/268/icon.png">
   </head>
   <body>
     <header>
