--- a/web_static/5-index.html
+++ b/web_static/5-index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE HTML>
 <html>
   <head>
-    <link href="styles/4-common.css" rel="stylesheet" type="text/css"/>
-    <link href="styles/3-header.css" rel="stylesheet" type="text/css"/>
-    <link href="styles/3-footer.css" rel="stylesheet" type="text/css"/>
-    <link href="styles/4-filters.css" rel="stylesheet" type="text/css"/>
+    <link rel="stylesheet" type="text/css" href="styles/4-common.css"/>
+    <link rel="stylesheet" type="text/css" href="styles/3-header.css"/>
+    <link rel="stylesheet" type="text/css" href="styles/3-footer.css"/>
+    <link rel="stylesheet" type="text/css" href="styles/5-filters.css"/>
     <link rel="icon" href="images/icon.png"/>
   </head>
   <header>
