--- a/web_static/6-index.html
+++ b/web_static/6-index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE HTML>
 <html>
   <head>
-    <link rel="stylesheet" type="text/css" href="2-common.css">
-    <link rel="stylesheet" type="text/css" href="2-header.css">
-    <link rel="stylesheet" type="text/css" href="2-footer.css">
-    <link rel="stylesheet" type="text/css" href="4-filters.css">
-    <link rel="icon" href="https://s3.amazonaws.com/intranet-projects-files/holbertonschool-higher-level_programming+/268/icon.png">
+    <link rel="stylesheet" type="text/css" href="styles/2-common.css">
+    <link rel="stylesheet" type="text/css" href="styles/2-header.css">
+    <link rel="stylesheet" type="text/css" href="styles/2-footer.css">
+    <link rel="stylesheet" type="text/css" href="styles/4-filters.css">
+    <link rel="icon" href="images/icon.png"/>
   </head>
   <body>
     <header>
